--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.9.0",
     "glightbox": "^3.3.1",
     "izitoast": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
